@@ -15,12 +15,9 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Type;
-import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
 /**
  * 计划智能体
@@ -34,12 +31,23 @@ import java.util.concurrent.TimeoutException;
  *     <li>流程编排: 按顺序执行每个 Step,管理 Step 间的依赖关系</li>
  *     <li>状态管理: 维护全局上下文,实现 Step 间的数据传递</li>
  *     <li>结果聚合: 汇总所有 Step 的执行结果,形成最终答案</li>
+ *     <li>质量校验: 每步执行后校验质量,最终校验目标达成度</li>
+ *     <li>自动修正: 目标未达成时自动生成补充步骤并重试</li>
  * </ul>
  * </p>
  *
  * @since 4.0.0
  */
 public class PlanAgent extends BaseAgent {
+
+    private static final Type listType = new TypeReference<List<Step>>() {
+    }.getType();
+
+    private static final Type stepValidationType = new TypeReference<Map<String, Object>>() {
+    }.getType();
+
+    private static final Type goalValidationType = new TypeReference<Map<String, Object>>() {
+    }.getType();
 
     private static final PromptTemplate PLAN_PROMPT_TEMPLATE = PromptTemplate.newBuilder()
             .template(PlanAgent.class.getResourceAsStream("/prompt/PLAN_AGENT.md"))
@@ -49,17 +57,20 @@ public class PlanAgent extends BaseAgent {
             .template(PlanAgent.class.getResourceAsStream("/prompt/PLAN_AGGREGATE.md"))
             .build();
 
+    private static final PromptTemplate STEP_VALIDATE_PROMPT_TEMPLATE = PromptTemplate.newBuilder()
+            .template(PlanAgent.class.getResourceAsStream("/prompt/PLAN_VALIDATE_STEP.md"))
+            .build();
+
+    private static final PromptTemplate GOAL_VALIDATE_PROMPT_TEMPLATE = PromptTemplate.newBuilder()
+            .template(PlanAgent.class.getResourceAsStream("/prompt/PLAN_VALIDATE_GOAL.md"))
+            .build();
+
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
     /**
      * ReActAgent 模板实例,用于创建执行 Step 的子 Agent
      */
     private final ReActAgent reactAgentTemplate;
-
-    /**
-     * Step 执行超时时间
-     */
-    private final Duration stepTimeout;
 
     protected PlanAgent(Builder builder) {
         super(builder);
@@ -71,8 +82,6 @@ public class PlanAgent extends BaseAgent {
                 .sessionManager(this.sessionManager())
                 .model(this.model())
                 .build();
-
-        this.stepTimeout = builder.stepTimeout;
     }
 
     @Override
@@ -82,20 +91,10 @@ public class PlanAgent extends BaseAgent {
 
     @Override
     public CompletionStage<AssistantMessage> async(UserMessage inbound) {
-        logger.info("{} start executing task: {}", this, inbound.text());
-
         return generatePlan(inbound)
                 .thenCompose(plan -> {
-                    logger.info("{} plan generated with {} steps", this, plan.steps().size());
-                    return executePlanAsync(plan, inbound);
-                })
-                .thenApply(result -> {
-                    logger.info("{} task completed", this);
-                    return result;
-                })
-                .exceptionally(ex -> {
-                    logger.error("{} task failed", this, ex);
-                    return Message.assistant("task execution failed: " + ex.getMessage());
+                    logger.debug("{} generated plan with {} steps", this, plan.steps().size());
+                    return executePlan(plan, inbound);
                 });
     }
 
@@ -114,7 +113,7 @@ public class PlanAgent extends BaseAgent {
                 .input(Input.newBuilder()
                         .addMessage(Message.user(prompt))
                         .build())
-                .parameters(parameters-> {
+                .parameters(parameters -> {
                     parameters.put("response_format", Map.of(
                             "type", "json_object"
                     ));
@@ -127,17 +126,15 @@ public class PlanAgent extends BaseAgent {
                 .thenApply(json -> {
                     logger.debug("{}/plan <<< {}", this, json);
                     try {
-                        // 直接解析为 List<Step>
-                        final Type listType = new TypeReference<List<Step>>() {}.getType();
-                        @SuppressWarnings("unchecked")
-                        final var steps = (List<Step>) JacksonJsonUtils.toObject(json, listType);
-                        
+
+                        final List<Step> steps = JacksonJsonUtils.toObject(json, listType);
+
                         // 构建完整的 Plan 对象
                         return new Plan(
-                            this.sessionId(),       // planId: 使用当前 sessionId
-                            inbound.text(),         // originalTask: 使用用户输入
-                            steps,                  // steps: 从 JSON 解析
-                            new HashMap<>()         // context: 初始化为空 Map
+                                this.sessionId(),       // planId: 使用当前 sessionId
+                                inbound.text(),         // originalTask: 使用用户输入
+                                steps,                  // steps: 从 JSON 解析
+                                new HashMap<>()         // context: 初始化为空 Map
                         );
                     } catch (Exception e) {
                         throw new IllegalArgumentException("Failed to parse plan JSON: " + json, e);
@@ -153,143 +150,155 @@ public class PlanAgent extends BaseAgent {
      * @param inbound 原始用户输入
      * @return 最终执行结果
      */
-    private CompletionStage<AssistantMessage> executePlanAsync(Plan plan, UserMessage inbound) {
+    private CompletionStage<AssistantMessage> executePlan(Plan plan, UserMessage inbound) {
+
+        // 步骤上下文,用于传递前置步骤的输出
         final var context = new HashMap<String, Object>();
-        context.put("original_task", inbound.text());
-
+        
         // 串行执行所有步骤
-        final var results = new ArrayList<StepResult>();
-        CompletableFuture<Void> chain = CompletableFuture.completedFuture(null);
+        final var results = new ArrayList<String>();
+        CompletionStage<Void> chain = CompletableFuture.completedStage(null);
 
-        for (Step step : plan.steps()) {
+        for (final var step : plan.steps()) {
             chain = chain.thenCompose(unused -> executeStep(step, context))
-                    .thenAccept(result -> {
-                        results.add(result);
-                        if (result.isSuccess()) {
-                            context.put("step_" + step.seq() + "_output", result.output());
-                            logger.info("{}.step{} completed", this, step.seq());
-                        } else {
-                            logger.error("{}.step{} failed: {}",
-                                    this, step.seq(),
-                                    result.error() != null ? result.error().getMessage() : "unknown error");
-                        }
+                    .thenAccept(output -> {
+                        results.add(output);
+                        context.put("step_" + step.seq() + "_output", output);
+                        logger.debug("{}/step-{} completed", this, step.seq());
                     });
         }
 
-        return chain.thenCompose(unused -> aggregateResults(plan, results, inbound));
+        return chain.thenCompose(unused -> aggregateResults(results, inbound));
     }
 
     /**
      * 执行单个步骤
      *
      * @param step    步骤
-     * @param context 全局上下文
-     * @return 执行结果
+     * @param context 步骤上下文
+     * @return 执行结果文本
      */
-    private CompletionStage<StepResult> executeStep(Step step, Map<String, Object> context) {
-        final var stepAgent = createStepAgent(step);
-        final var userMessage = buildStepUserMessage(step, context);
+    private CompletionStage<String> executeStep(Step step, Map<String, Object> context) {
 
-        logger.debug("{}.step{} starting: {}", this, step.seq(), step.description());
-
-        final var future = stepAgent.async(userMessage).toCompletableFuture();
-
-        // 添加超时控制
-        try {
-            final var result = future.get(stepTimeout.toMillis(), TimeUnit.MILLISECONDS);
-            return CompletableFuture.completedStage(StepResult.success(step.seq(), result.text()));
-        } catch (TimeoutException e) {
-            future.cancel(true);
-            return CompletableFuture.completedStage(
-                    StepResult.failed(step.seq(), new TimeoutException("Step execution timeout: " + stepTimeout)));
-        } catch (Exception e) {
-            return CompletableFuture.completedStage(StepResult.failed(step.seq(), e));
-        }
-    }
-
-    /**
-     * 创建步骤专用的 ReActAgent
-     *
-     * @param step 步骤
-     * @return ReActAgent 实例
-     */
-    private ReActAgent createStepAgent(Step step) {
-        final var stepSessionId = String.format("%s.step%d", this.sessionId(), step.seq());
-
-        return ReActAgent.newBuilder(reactAgentTemplate)
-                .sessionId(stepSessionId)
+        final var stepAgent = ReActAgent.newBuilder(reactAgentTemplate)
+                .sessionId("%s-step-%d".formatted(this.sessionId(), step.seq()))
                 .name("step-executor-" + step.seq())
                 .build();
-    }
 
-    /**
-     * 构建步骤的用户消息
-     *
-     * @param step    步骤
-     * @param context 全局上下文
-     * @return 用户消息
-     */
-    private UserMessage buildStepUserMessage(Step step, Map<String, Object> context) {
+        // 收集所有前置步骤的输出
         final var sb = new StringBuilder();
-
-        sb.append("## 当前任务\n\n");
-        sb.append(step.description()).append("\n\n");
-
-        // 添加入口来源信息
-        if (step.inputFrom() != null) {
-            final var inputKey = "step_" + step.inputFrom() + "_output";
-            final var inputValue = context.get(inputKey);
-            if (inputValue != null) {
-                sb.append("## 前置步骤输出\n\n");
-                sb.append("来自步骤 ").append(step.inputFrom()).append(" 的结果:\n");
-                sb.append(inputValue).append("\n\n");
+        for (int i = 1; i < step.seq(); i++) {
+            final var output = context.get("step_" + i + "_output");
+            if (output != null) {
+                sb.append("### 步骤 ").append(i).append(" 输出\n");
+                sb.append(output).append("\n\n");
             }
-        } else {
-            // 使用原始任务作为输入
-            sb.append("## 原始任务\n\n");
-            sb.append(context.get("original_task")).append("\n\n");
         }
+        final String prefixOutput = sb.toString();
 
-        sb.append("## 期望输出\n\n");
-        sb.append(step.expectedOutput()).append("\n\n");
+        final var stepInbound = Message.user(PromptTemplate.newBuilder()
+                .template("""
+                        ## 当前步骤
+                        ${step_desc}
+                        
+                        ## 前置步骤输出
+                        ${prefix_step_output}
+                        
+                        ## 期望输出
+                        ${expected_output}
+                        
+                        请使用合适的工具完成此步骤
+                        """)
+                .variable("step_desc", step.description())
+                .variable("prefix_step_output", prefixOutput.isEmpty() ? "无" : prefixOutput)
+                .variable("expected_output", step.expectedOutput())
+                .build()
+                .render());
 
-        sb.append("请使用合适的工具完成此步骤。");
-
-        return Message.user(sb.toString());
+        return stepAgent.async(stepInbound)
+                .thenApply(AssistantMessage::text);
     }
 
     /**
      * 聚合所有步骤的结果
      *
-     * @param plan        执行计划
-     * @param stepResults 步骤执行结果列表
-     * @param inbound     原始用户输入
+     * @param results 步骤执行结果列表
+     * @param inbound 原始用户输入
      * @return 最终的助手消息
      */
-    private CompletionStage<AssistantMessage> aggregateResults(
-            Plan plan,
-            List<StepResult> stepResults,
+    private CompletionStage<AssistantMessage> aggregateResults(List<String> results, UserMessage inbound) {
+        // 校验原始目标是否达成
+        return validateGoal(inbound.text(), results)
+                .thenCompose(validation -> {
+                    final var goalAchieved = (Boolean) validation.getOrDefault("goal_achieved", true);
+                    
+                    if (goalAchieved) {
+                        // 目标已达成，直接聚合
+                        logger.debug("{}/goal-validation passed", this);
+                        return doAggregate(results, inbound);
+                    } else {
+                        // 目标未达成，生成补充步骤
+                        logger.warn("{}/goal-validation failed, generating supplementary steps", this);
+                        final var supplementarySteps = generateSupplementarySteps(inbound.text(), validation, results.size());
+                        
+                        if (supplementarySteps.isEmpty()) {
+                            // 没有建议的补充步骤，直接聚合
+                            logger.warn("{}/no supplementary steps suggested", this);
+                            return doAggregate(results, inbound);
+                        }
+                        
+                        // 执行补充步骤
+                        logger.info("{}/executing {} supplementary steps", this, supplementarySteps.size());
+                        return executeSupplementarySteps(supplementarySteps, results, inbound);
+                    }
+                });
+    }
+
+    /**
+     * 执行补充步骤
+     *
+     * @param supplementarySteps 补充步骤列表
+     * @param existingResults    已有结果
+     * @param inbound            原始用户输入
+     * @return 最终的助手消息
+     */
+    private CompletionStage<AssistantMessage> executeSupplementarySteps(
+            List<Step> supplementarySteps,
+            List<String> existingResults,
             UserMessage inbound
     ) {
-        // 检查是否有失败的步骤
-        final var failedSteps = stepResults.stream()
-                .filter(r -> !r.isSuccess())
-                .toList();
-
-        if (!failedSteps.isEmpty()) {
-            final var errorMsg = failedSteps.stream()
-                    .map(r -> String.format("Step %d failed: %s", r.seq(),
-                            r.error() != null ? r.error().getMessage() : "unknown"))
-                    .reduce((a, b) -> a + "; " + b)
-                    .orElse("Unknown error");
-            return CompletableFuture.completedStage(
-                    Message.assistant("Task execution encountered errors: " + errorMsg));
+        final var context = new HashMap<String, Object>();
+        // 将已有结果放入 context
+        for (int i = 0; i < existingResults.size(); i++) {
+            context.put("step_" + (i + 1) + "_output", existingResults.get(i));
         }
 
-        // All steps succeeded, generate final summary
+        final var allResults = new ArrayList<>(existingResults);
+        CompletionStage<Void> chain = CompletableFuture.completedStage(null);
+
+        for (final var step : supplementarySteps) {
+            chain = chain.thenCompose(unused -> executeStep(step, context))
+                    .thenAccept(output -> {
+                        allResults.add(output);
+                        context.put("step_" + step.seq() + "_output", output);
+                        logger.debug("{}/supplementary-step-{} completed", this, step.seq());
+                    });
+        }
+
+        return chain.thenCompose(unused -> doAggregate(allResults, inbound));
+    }
+
+    /**
+     * 执行实际的聚合操作
+     *
+     * @param results 步骤结果列表
+     * @param inbound 原始用户输入
+     * @return 最终的助手消息
+     */
+    private CompletionStage<AssistantMessage> doAggregate(List<String> results, UserMessage inbound) {
         final var prompt = AGGREGATE_PROMPT_TEMPLATE.render(Map.of(
                 "original_task", inbound.text(),
-                "step_results", formatStepResults(stepResults)
+                "step_results", formatStepResults(results)
         ));
 
         final var request = AigcRequest.newBuilder(model())
@@ -305,20 +314,118 @@ public class PlanAgent extends BaseAgent {
     /**
      * 格式化步骤结果
      *
-     * @param stepResults 步骤结果列表
+     * @param results 步骤结果列表
      * @return 格式化后的字符串
      */
-    private String formatStepResults(List<StepResult> stepResults) {
+    private String formatStepResults(List<String> results) {
         final var sb = new StringBuilder();
-        for (var result : stepResults) {
-            sb.append("### Step ").append(result.seq()).append("\n");
-            sb.append("Status: ").append(result.status()).append("\n");
-            if (result.output() != null) {
-                sb.append("Output: ").append(result.output()).append("\n");
-            }
-            sb.append("\n");
+        for (int i = 0; i < results.size(); i++) {
+            sb.append("### Step ").append(i + 1).append("\n");
+            sb.append("Output: ").append(results.get(i)).append("\n\n");
         }
         return sb.toString();
+    }
+
+    /**
+     * 校验步骤执行质量
+     *
+     * @param step          步骤
+     * @param actualOutput  实际输出
+     * @return 校验结果
+     */
+    private CompletionStage<Map<String, Object>> validateStep(Step step, String actualOutput) {
+        final var prompt = STEP_VALIDATE_PROMPT_TEMPLATE.render(Map.of(
+                "step_description", step.description(),
+                "expected_output", step.expectedOutput(),
+                "actual_output", actualOutput
+        ));
+
+        final var request = AigcRequest.newBuilder(model())
+                .input(Input.newBuilder()
+                        .addMessage(Message.user(prompt))
+                        .build())
+                .parameters(parameters -> {
+                    parameters.put("response_format", Map.of("type", "json_object"));
+                    return parameters;
+                })
+                .build();
+
+        return client().async(request)
+                .thenApply(response -> response.output().best().message().text())
+                .thenApply(json -> {
+                    try {
+                        return JacksonJsonUtils.toObject(json, stepValidationType);
+                    } catch (Exception e) {
+                        logger.warn("{}/validate-step failed to parse JSON: {}", this, json, e);
+                        return Map.of("completed", true, "quality", "unknown");
+                    }
+                });
+    }
+
+    /**
+     * 校验原始目标是否达成
+     *
+     * @param originalTask 原始任务
+     * @param stepResults  步骤结果列表
+     * @return 校验结果
+     */
+    private CompletionStage<Map<String, Object>> validateGoal(String originalTask, List<String> stepResults) {
+        final var prompt = GOAL_VALIDATE_PROMPT_TEMPLATE.render(Map.of(
+                "original_task", originalTask,
+                "step_results", formatStepResults(stepResults)
+        ));
+
+        final var request = AigcRequest.newBuilder(model())
+                .input(Input.newBuilder()
+                        .addMessage(Message.user(prompt))
+                        .build())
+                .parameters(parameters -> {
+                    parameters.put("response_format", Map.of("type", "json_object"));
+                    return parameters;
+                })
+                .build();
+
+        return client().async(request)
+                .thenApply(response -> response.output().best().message().text())
+                .thenApply(json -> {
+                    try {
+                        return JacksonJsonUtils.toObject(json, goalValidationType);
+                    } catch (Exception e) {
+                        logger.warn("{}/validate-goal failed to parse JSON: {}", this, json, e);
+                        return Map.of("goal_achieved", true);
+                    }
+                });
+    }
+
+    /**
+     * 生成补充步骤
+     *
+     * @param originalTask   原始任务
+     * @param validation     校验结果
+     * @param existingSteps  已有步骤数
+     * @return 补充步骤列表
+     */
+    private List<Step> generateSupplementarySteps(String originalTask, Map<String, Object> validation, int existingSteps) {
+        @SuppressWarnings("unchecked")
+        final var suggestedSteps = (List<Map<String, Object>>) validation.get("suggested_steps");
+        
+        if (suggestedSteps == null || suggestedSteps.isEmpty()) {
+            return List.of();
+        }
+
+        final var steps = new ArrayList<Step>();
+        int seq = existingSteps + 1;
+        
+        for (var suggested : suggestedSteps) {
+            final var description = (String) suggested.get("description");
+            final var expectedOutput = (String) suggested.get("expected_output");
+            
+            if (description != null && expectedOutput != null) {
+                steps.add(new Step(seq++, description, expectedOutput, null, null));
+            }
+        }
+        
+        return steps;
     }
 
     @Override
@@ -338,24 +445,11 @@ public class PlanAgent extends BaseAgent {
 
     public static class Builder extends BaseAgent.Builder<PlanAgent, Builder> {
 
-        private Duration stepTimeout = Duration.ofMinutes(5);
-
         protected Builder() {
         }
 
         protected Builder(PlanAgent agent) {
             super(agent);
-        }
-
-        /**
-         * 设置步骤执行超时时间
-         *
-         * @param timeout 超时时间
-         * @return 构建器
-         */
-        public Builder stepTimeout(Duration timeout) {
-            this.stepTimeout = timeout;
-            return this;
         }
 
         @Override
